--- a/index.html
+++ b/index.html
@@ -37,28 +37,6 @@
             <section id="white-divider">
                 <img src="img/homepage-waves/new_white_divider.svg" alt="">
             </section>
-            <script>
-
-                let sendData = async function (email) {
-                    let response = await fetch(`https://script.google.com/macros/s/AKfycbxMco8ml1B2Ffjq64glRyIJGT7_erICT9cCrkMk74sx3ZtrNVc/exec?email=${email}`, {                            method: "GET",
-                        method: "GET",
-                        mode: "cors",
-                    });
-                    return response.json();
-                }
-
-                let submitMailingList = function () {
-                    let email = document.getElementById("mailing").value;
-                    let emailValidRegex = /^(?:[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*|"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])$/g
-                    
-                    if (email.match(emailValidRegex)) {
-                        sendData(encodeURIComponent(email)).then(res => {
-                            console.log(res.result);
-                        })
-                    }
-                }
-
-            </script>
             <section id="bottom-info">
                 <div>
                     <div id="description">
@@ -66,7 +44,7 @@
                             <span class="bold">Our mission</span> is, first and foremost, to inspire students and help them bring their ideas to life. Game design can be daunting and even unapproachable for newcomers, but we hope to show you the ropes and help you explore what it means to be an indie game developer.
                         </p>
                         <p>
-                            We meet every <span>Wednesday</span> online. Please join our mailing list or shoot us an email at <a href="mailto:studioheartengine@gmail.com">studioheartengine@gmail.com</a>. Everyone is welcome!
+                            We meet every <span>Wednesday</span> at D-16 during Lunch. Stop by our <a href="https://discord.gg/Ay4vQjCDZt">discord for more information</a>. Everyone is welcome!
                         </p>
                         <p id="see-mailing-list">You can join our mailing list <a onclick="scrollToMailingList()">here</a>.</p>
                     </div>
@@ -86,34 +64,23 @@
                             <div>
                                 <img src="img/portraits/Colin Zhang.png">
                                 <h3>Colin Zhang</h3>
-                                <p>VP of Events</p>
-                            </div>
-                            <div>
-                                <img src="img/portraits/Siva Tanikonda.png">
-                                <h3>Siva Tanikonda</h3>
                                 <p>Secretary</p>
                             </div>
                             <div>
-                                <img src="img/portraits/Sean Huang.png">
-                                <h3>Sean Huang</h3>
-                                <p>Treasurer</p>
+                                <img src="">
+                                <h3>Lehuy Hoang</h3>
+                                <p>VP of Events</p>
                             </div>
                             <div>
-                                <img src="img/portraits/Will Liang.png">
-                                <h3>Will Liang</h3>
-                                <p>ADVISOR</p>
-                            </div>
-                            <div>
-                                <img src="img/portraits/Ben Tomlin.png">
-                                <h3>Ben Tomlin</h3>
-                                <p>ADVISOR</p>
+                                <img src="">
+                                <h3>Lucas Fraeyman</h3>
+                                <p>VP of Events</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div>
                     <h3>Join our mailing list!</h3>
-                    <input id="mailing" onsubmit="submitMailingList()" placeholder="Enter your email to join our mailing list!">
                     <div>
                         <a href="https://discord.gg/MffTmZWTvH">
                             <img src="img/icons/Discord.svg">
